fix daddy big head, son small one

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -283,9 +283,7 @@ input[type=number] {
 }
 
 .input-quantity{
-  margin-top: 10px;
   width: 40px;
-  height: 33px;
   border: 1px solid #eceffc;
   border-radius: 1px;
   text-align: center;
